apps/media/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-httproute
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: iserlohn.thisratis.gay
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
      sectionName: wildcard-https
  hostnames:
    - jellyfin.thisratis.gay
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
